# P2Button

./: .gitignore  P2Button.ino  README.md
P2Button-WebApp/: app.js  index.html
P2CAM_PCBS/FADER_PCBs/LED_FADER/Outputs/: LED_FADER-top-pos.csv  LED_FADER.csv  LED_FADER.kicad_pcb  LED_FADER.kicad_prl  LED_FADER.kicad_pro  LED_FADER.kicad_sch  LED_FADER.xml  fp-info-cache  fp-lib-table
P2CAM_PCBS/FADER_PCBs/LED_FADER/Outputs/Imported LED_FADER/: LED_FADER(1).PcbDoc  LED_FADER.PcbDoc  LED_FADER.PrjPcb  LED_FADER.PrjPcbStructure  LED_FADER.SchDoc  LED_FADER.SchLib  LED_FADER_template.SCHDOT  NE555P.PcbLib  NE555P.SchLib  UP20-C-F-G-FL-1-P12-TR(1).PcbLib  UP20-C-F-G-FL-1-P12-TR(1).SchLib  UP20-C-F-G-FL-1-P12-TR.PcbLib  UP20-C-F-G-FL-1-P12-TR.SchLib  UP20-C-F-G-FL-1-P12-TR_foot.PcbLib
P2CAM_PCBS/FADER_PCBs/LED_FADER/Outputs/Outputs/: LED_FADER-B_Cu.gbr  LED_FADER-B_Mask.gbr  LED_FADER-B_Paste.gbr  (+9 more)
XIAO esp32-C3/: ESP_Free_RTOS_XIAO_esp32-C3.ino
Xiao ESP32-S3 plus/: README.md
Xiao ESP32-S3 plus/firmware/: .gitignore  ESP32_s3PLUS_NewRECORDING.ino  README.md
Xiao ESP32-S3 plus/firmware/ui_headers/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_HoldToUnlock.c  ui_HoldToUnlock.h  ui_HoldToUpload.c  ui_HoldToUpload.h  ui_LOGIN.c  ui_LOGIN.h  ui_LOGO1.c  ui_LOGO1.h  ui_LOGO2.c  ui_LOGO2.h  ui_Recording.c  ui_Recording.h  ui_Unlock.c  ui_Unlock.h  ui_Uploading.c  ui_Uploading.h  ui_img_0_intro_png.c  ui_img_1051634396.c  ui_img_1_logo_png.c  ui_img_3a_unlock_png.c  ui_img_3b_unlock_png.c  ui_img_4_login_png.c  ui_img_5_recording_png.c  ui_img_6_upload_png.c
(+38 files in other folders)
